--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Stay Focused on</h1>
     <h1>Mission 2022</h1>
-    <p></p>
+    <p>The goal in 2022 is to build yourself as a web developer</p>
 </body>
 </html>
