--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.jpg"> 
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Stay Focused on</h1>
-    <h1>Mission 2022</h1>
+    <div class="half-width">
+        <h1>Stay Focused on</h1>
+    <h1><span class="mi-22">Mission 2022</span></h1>
     <p>The goal in 2022 is to build yourself as a web developer</p>
+    <a class="link-button" href="explore.html" target="_blank">Explore Now</a>
+    </div>
+    <div class="half-width">
+        <img src="person-2.png" alt="a man on cap">
+    </div>
+
+
 </body>
 </html>
