--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a class="link-button" href="explore.html" target="_blank">Explore Now</a>
     </div>
     <div class="half-width">
-        <img src="person-2.png" alt="a man on cap">
+        <img src="img/person-2.png" alt="a man on cap">
     </div>
 
 
