--- a/index.html
+++ b/index.html
@@ -1,27 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.jpg"> 
+    <link rel="icon" type="image/x-icon" href="img/favicon.jpg">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div class="half-width">
-        <h1>Stay Focused on</h1>
-    <h1><span class="mi-22">Mission 2022</span></h1>
-    <p>The goal in 2022 is to build yourself as a web developer</p>
-    <a class="link-button" href="explore.html" target="_blank">Explore Now</a>
-    </div>
-    <div class="half-width">
-        <img src="img/person-2.png" alt="a man on cap">
-    </div>
+    <section class="stay-focused flexible">
+        <div class="half-width">
+            <h1>Stay Focused on</h1>
+            <h1><span class="mi-22">Mission 2022</span></h1>
+            <p>The goal in 2022 is to build yourself as a web developer
+                Introducing myself I am Sojib Ahmed. Currently a second-year student of the degree.
+                I live in the
+                Jhenaidah district in the Khulna division.
+            </p>
+            <a class="link-button" href="explore.html" target="_blank">Explore Now</a>
+        </div>
+        <div class="half-width">
+            <img src="img/person-2.png" alt="a man on cap">
+        </div>
+    </section>
+    <section class="2nd-sec-flex"></section>
+    <h1 id="text"> <em>My Mission in <span class="mi-22">2022</em> </span></h1>
+        <div>
+            <img src="img/illustrators/illustrator-1.png" width="100px" alt="image of dream uncle">
+            <h2>Mission</h2>
+            <p>
+                The goal in 2022 is to build yourself as a web developer
+                I am introducing myself as Sajib Ahmed
+            </p>
 
+        </div>
+        <div>
+            <h2>Vision</h2>
+            <p></p>
+        </div>
 
+    </section>
 </body>
+
 </html>
