middle position added

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         <div class="half-width">
             <h1>Stay Focused on</h1>
             <h1><span class="mi-22">Mission 2022</span></h1>
-            <p>The goal in 2022 is to build yourself as a web developer
+            <p>The goal in 2022 is to build myself as a web developer
                 Introducing myself I am Sojib Ahmed. Currently a second-year student of the degree.
-                I live in the
-                Jhenaidah district in the Khulna division.
+                I live in the Jhenaidah district in the Khulna division.
             </p>
             <a class="link-button" href="explore.html" target="_blank">Explore Now</a>
         </div>
@@ -29,23 +28,33 @@
             <img src="img/person-2.png" alt="a man on cap">
         </div>
     </section>
-    <section class="2nd-sec-flex"></section>
     <h1 id="text"> <em>My Mission in <span class="mi-22">2022</em> </span></h1>
-        <div>
+    <section>
+        <div class="equal">
             <img src="img/illustrators/illustrator-1.png" width="100px" alt="image of dream uncle">
             <h2>Mission</h2>
             <p>
-                The goal in 2022 is to build yourself as a web developer
-                I am introducing myself as Sajib Ahmed
+                My mission in 2022 is to survive to the end in programming-hero.Build my own skills in programming 
             </p>
 
         </div>
-        <div>
+        <div class="equal">
+            <img src="img/illustrators/illustrator-2.png" width="100px" alt=" a man with vission">
             <h2>Vision</h2>
-            <p></p>
+            <p> My vision is to make myself worthy first. Then initially got a job at the Programming-Hero Institute </p>
         </div>
-
+        <div class="equal">
+            <img src="img/illustrators/illustrator-3.png" width="100px" alt="a man with gols">
+            <h2>Goals</h2>
+            <p>
+               My goal is to make myself a better fit programmer.
+               and creating a good position myself in the marketplace
+            </p>
+        </div>
     </section>
+
+
+
 </body>
 
 </html>
