--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <section class="stay-focused flexible">
         <div class="half-width">
-            <h1>Stay Focused on</h1>
-            <h1><span class="mi-22">Mission 2022</span></h1>
+            <h1>Stay Focused on<br> <span class="mi-22">Mission 2022</span></h1>
+            <h1></h1>
             <p>The goal in 2022 is to build myself as a web developer
                 Introducing myself I am Sojib Ahmed. Currently a second-year student of the degree.
                 I live in the Jhenaidah district in the Khulna division.
