--- a/explore.html
+++ b/explore.html
@@ -1,5 +1,22 @@
-<p>
-    I'm a lazy person but I stick to it until succeed.
-    And I'm confident I'll be a web developer one day. Everyone will pray for me so that I can reach my goal. I have the
-    desire and patience to work hard And I don't get bored even if I sit at the computer all day.
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        p{
+            background-color: bisque;
+            color: blue;
+        }
+    </style>
+</head>
+<body>
+    <p>
+        <em>I'm a lazy person but I stick to it until succeed.
+            And I'm confident I'll be a web developer one day. Everyone will pray for me so that I can reach my goal. I have the
+            desire and patience to work hard And I don't get bored even if I sit at the computer all day.</em>
+    </p>
+</body>
+</html>
