--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <body>
     <section class="stay-focused flexible">
         <div class="half-width">
-            <h1>Stay Focused on<br> <span class="mi-22">Mission 2022</span></h1>
-            <h1></h1>
+            <h1 id="top-border">Stay Focused on <br><span class="mi-22">Mission 2022</span></h1>
             <p>The goal in 2022 is to build myself as a web developer
                 Introducing myself I am Sojib Ahmed. Currently a second-year student of the degree.
                 I live in the Jhenaidah district in the Khulna division.
@@ -28,9 +27,9 @@
             <img src="img/person-2.png" alt="a man on cap">
         </div>
     </section>
-    <h1 id="text"> <em>My Mission in <span class="mi-22">2022</em> </span></h1>
+    <h1 id="text"> <em>My Mission in <span>2022</em> </span></h1>
     <section>
-        <div class="equal">
+        <div class="equal-1">
             <img src="img/illustrators/illustrator-1.png" width="100px" alt="image of dream uncle">
             <h2>Mission</h2>
             <p>
@@ -38,12 +37,12 @@
             </p>
 
         </div>
-        <div class="equal">
+        <div class="equal-2">
             <img src="img/illustrators/illustrator-2.png" width="100px" alt=" a man with vission">
             <h2>Vision</h2>
             <p> My vision is to make myself worthy first. Then initially got a job at the Programming-Hero Institute </p>
         </div>
-        <div class="equal">
+        <div class="equal-3">
             <img src="img/illustrators/illustrator-3.png" width="100px" alt="a man with gols">
             <h2>Goals</h2>
             <p>
@@ -52,6 +51,13 @@
             </p>
         </div>
     </section>
+    <br>
+<section>
+    <div>
+        <img src="img/pictures/coding.png" width="200px" alt="">
+    </div>
+</section>
+  
 
 
 
