--- a/index.html
+++ b/index.html
@@ -33,32 +33,50 @@
             <img src="img/illustrators/illustrator-1.png" width="100px" alt="image of dream uncle">
             <h2>Mission</h2>
             <p>
-                My mission in 2022 is to survive to the end in programming-hero.Build my own skills in programming 
+                My mission in 2022 is to survive to the end in programming-hero.Build my own skills in programming
             </p>
 
         </div>
         <div class="equal-2">
             <img src="img/illustrators/illustrator-2.png" width="100px" alt=" a man with vission">
             <h2>Vision</h2>
-            <p> My vision is to make myself worthy first. Then initially got a job at the Programming-Hero Institute </p>
+            <p> My vision is to make myself worthy first. Then initially got a job at the Programming-Hero Institute
+            </p>
         </div>
         <div class="equal-3">
             <img src="img/illustrators/illustrator-3.png" width="100px" alt="a man with gols">
             <h2>Goals</h2>
             <p>
-               My goal is to make myself a better fit programmer.
-               and creating a good position myself in the marketplace
+                My goal is to make myself a better fit programmer.
+                and creating a good position myself in the marketplace
             </p>
         </div>
     </section>
     <br>
-<section>
-    <div>
-        <img src="img/pictures/coding.png" width="200px" alt="">
-    </div>
-</section>
-  
-
+    <section id="middle">
+        <div id="middle-text">
+            <img src="img/pictures/coding.png" width="200px" alt="">
+        </div>
+        <div id="middle">
+            <h2>Develop <br> Without Limits</h2>
+            <p>There is no limit to development you can develop yourself if you want which is why you have to work hard
+                and be patient remember successful people never lose they try again and again</p>
+            <a class="link-button" href="">Read the Documentation</a>
+        </div>
+    </section>
+    <section id="last">
+       <div>
+        <h1>Know our <br> Global Community</h1>
+        <p>Global Community takes young readers on a journey beyond their own communities to learn about aspects of
+            daily life in other places around the world. Inviting text, accessible maps, and vibrant photographs work
+            together to explain how cultural and environmental characteristics affect people’s lives and help determine
+            how they meet their needs. </p>
+            <a class="link-button" href="">Read the Documentation</a>
+       </div>
+       <div id="last">
+           <img src="img/pictures/project.png" width="500px" alt="Some people have discusseds">
+       </div>
+    </section>
 
 
 </body>
