--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <br>
     <section id="middle">
         <div id="middle-text">
-            <img src="img/pictures/coding.png" width="200px" alt="">
+            <img src="img/pictures/coding.png" width="300px" alt="">
         </div>
         <div id="middle">
             <h2>Develop <br> Without Limits</h2>
@@ -65,7 +65,7 @@
         </div>
     </section>
     <section id="last">
-       <div>
+       <div class="last1">
         <h1>Know our <br> Global Community</h1>
         <p>Global Community takes young readers on a journey beyond their own communities to learn about aspects of
             daily life in other places around the world. Inviting text, accessible maps, and vibrant photographs work
@@ -74,11 +74,34 @@
             <a class="link-button" href="">Read the Documentation</a>
        </div>
        <div id="last">
-           <img src="img/pictures/project.png" width="500px" alt="Some people have discusseds">
+           <img src="img/pictures/project.png"width="450px" " alt="Some people have discusseds">
        </div>
     </section>
+    <h1 id="text" >Build <span >Corona Applicdation</span></h1>
+    
 
-
+    <section id="last"> 
+        <div > 
+    <img src="img/pictures/app.png" width="300px" alt="">
+  </div>
+  <div class="last1">
+      <h1>
+          Stay safe with Go <span class="corona">Corona</span>
+      </h1>
+      <p>Get vaccinated as soon as it’s your turn and follow local guidance on vaccination.
+Keep physical distance of at least 1 metre from others, even if they don’t appear to be sick. Avoid crowds and close contact.
+Wear a properly fitted mask when physical distancing is not possible and in poorly ventilated settings.
+Clean your hands frequently with alcohol-based hand rub or soap and water.</p>
+<a class="link-button" href="">App Fetures</a>  
+</div>
+    </section>
+  
 </body>
+    <section id="bottom">
+        <div>
+    <h1 id="last-text">Mission <span >2022</span> <br>
+    <small>Hard work, Perseverance, and Determination for 2022</small>
+    </div>
+    </section>
 
 </html>
