--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
                 Introducing myself I am Sojib Ahmed. Currently a second-year student of the degree.
                 I live in the Jhenaidah district in the Khulna division.
             </p>
-            <a class="link-button" href="explore.html" target="_blank">Explore Now</a>
+            <a class="link-button" href="explore.html" target="_blank">Explore Now</a> <br><br>
+            <small>Scroll down to explore more about us</small>
         </div>
         <div class="half-width">
-            <img src="img/person-2.png" alt="a man on cap">
+            <img src="img/person-2.png" width="500px"  alt="a man on cap">
         </div>
     </section>
     <h1 id="text"> <em>My Mission in <span>2022</em> </span></h1>
@@ -96,12 +97,12 @@ Clean your hands frequently with alcohol-based hand rub or soap and water.</p>
 </div>
     </section>
   
-</body>
     <section id="bottom">
-        <div>
-    <h1 id="last-text">Mission <span >2022</span> <br>
-    <small>Hard work, Perseverance, and Determination for 2022</small>
+        <div >
+    <h2>Mission<span class="corona">2022</span> </h2>
+    <h6>Hard work, Perseverance, and Determination for 2022</h6>
     </div>
     </section>
-
+</body>
+  
 </html>
