--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <small>Scroll down to explore more about us</small>
         </div>
         <div class="half-width">
-            <img src="img/person-2.png" width="500px"  alt="a man on cap">
+            <img src="img/person-2.png"  alt="a man on cap">
         </div>
     </section>
     <h1 id="text"> <em>My Mission in <span>2022</em> </span></h1>
@@ -77,26 +77,32 @@
        <div id="last">
            <img src="img/pictures/project.png"width="450px" " alt="Some people have discusseds">
        </div>
-    </section>
-    <h1 id="text" >Build <span >Corona Applicdation</span></h1>
-    
-
-    <section id="last"> 
-        <div > 
-    <img src="img/pictures/app.png" width="300px" alt="">
-  </div>
-  <div class="last1">
-      <h1>
-          Stay safe with Go <span class="corona">Corona</span>
-      </h1>
-      <p>Get vaccinated as soon as it’s your turn and follow local guidance on vaccination.
-Keep physical distance of at least 1 metre from others, even if they don’t appear to be sick. Avoid crowds and close contact.
-Wear a properly fitted mask when physical distancing is not possible and in poorly ventilated settings.
-Clean your hands frequently with alcohol-based hand rub or soap and water.</p>
-<a class="link-button" href="">App Fetures</a>  
-</div>
-    </section>
-  
+    </section> <br><br>
+    <h1>  <strong>If you want to shop, you can come back, Bismillah Shop. . . . </strong></h1>
+    <div><center>
+        <img src="pic/Bismillah Shop.jpg" alt="bismillah shop"width="500" 
+        height="200" >
+    </center>
+    </div>
+    <h1> <center> <em>Bismillah shop.com</em> </center> </h1>
+    <p>
+   আমাদের দোকানে সব ধরনের পন্য পাবেন
+    </p>
+    <br><br>
+<details>
+    <summary>Tap hare</summary>
+    <ol>
+        <li>laptop</li> 
+        <li>Mobile</li> 
+        <li>camera</li>
+    </ol>
+</details>
+<ul>
+    <li>Books</li>
+    <li>Pen</li>
+    <li>Notes</li>
+    <li>Pencil</li>
+</ul>
     <section id="bottom">
         <div >
     <h2>Mission<span class="corona">2022</span> </h2>
